FIX text-area scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@
    scrollbar-gutter: stable;
 }
 
+textarea {
+   &::-webkit-scrollbar {
+      width: .5rem;
+   }
+
+   &::-webkit-scrollbar-thumb {
+      border: none;
+      cursor: default;
+   }
+}
+
 ::-webkit-scrollbar {
    width: 1rem;
 }
